--- a/webpack-template/package.json
+++ b/webpack-template/package.json
@@ -16,7 +16,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.1.0",
     "eslint": "^5.11.1",
@@ -24,7 +24,7 @@
     "eslint-plugin-import": "^2.14.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "jest": "23.6.0",
     "jsdoc": "^3.5.5",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.28.3",
