--- a/ts-template/package.json
+++ b/ts-template/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint .",
     "test": "jest",
     "coverage": "jest --coverage",
+    "doc": "jsdoc -c jsdoc.conf.json",
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
+    "preshow:doc": "npm run doc",
+    "show:doc": "live-server doc",
     "preshow:dist": "npm run build",
     "show:dist": "live-server dist"
   },
@@ -20,6 +23,7 @@
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@types/jest": "^24.0.24",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
@@ -29,14 +33,17 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "jsdoc": "^3.6.3",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "ts-jest": "^24.2.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.7.0",
     "core-js": "^3.6.0"
   }
 }
