--- a/workspace/package.json
+++ b/workspace/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/Redhead80/ajs-homeworks/issues"
   },
-  "homepage": "https://github.com/Redhead80/ajs-homeworks#readme"
+  "homepage": "https://github.com/Redhead80/ajs-homeworks#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11"
+  }
 }
