--- a/workspace/package.json
+++ b/workspace/package.json
@@ -4,6 +4,8 @@
   "description": "\"Browser based game\"",
   "main": "index.js",
   "scripts": {
+    "start": "live-server src",
+    "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/kievsan/ajs-homeworks/issues"
   },
-  "homepage": "https://github.com/kievsan/ajs-homeworks/tree/master#readme"
+  "homepage": "https://github.com/kievsan/ajs-homeworks/tree/master#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "live-server": "^1.1.0"
+  },
+  "dependencies": {
+    "core-js": "^3.27.2"
+  }
 }
