--- a/ts-template/.appveyor.yml
+++ b/ts-template/.appveyor.yml
@@ -1,10 +1,10 @@
-image: Ubuntu1804  # образ для сборки
-
-stack: node 16  # окружение
+environment:
+  nodejs_version: "20"
 
 branches:
   only:
     - master  # ветка git
+    - main
 
 cache: node_modules  # кеширование
 
